# core

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
src/: __init__.py
src/agent/: base_agent.py
src/voxentia/memory/: memory_manager.py
src/voxentia/tools/: tool_interface.py
tests/: test_base_agent.py
